21. tls/tls.c: fixed few warnings without ssl errors
23. tls/tls.c: BUG. SSL_CTX_set_cipher_list incorrectly called instead of
    SSL_CTX_set_ciphersuites when method is auto
24. tls/tls.c: set min/max proto version only when min/max version variable is
    non-zero
- 26/08/2023
25. tls/tls.c: refactored tls_get_method(), tls_set_method()

* Sun Apr 23 2023 16:55:15 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1.3-1.1%{?dist}
Release 1.1.3-1.1 Start 08/02/2023 End 23/04/2023
- 08/02/2023
01. include qmailconfig.h if HAVE_CONFIG_H is not defined
- 13/02/2023
02. ssl/tls.c: removed SSL_CTX_free in tls_session on SSL_new failure
03. base/setuserid.c: rewind passwd file using qsetpwent, setpwent
- 15/02/2023
04. base/tls.c: self generate rsa/dh parameters if rsa/dh files are missing or
    unreadable
- 17/02/2023
05. base/commands.c: return -3 for out of memory error
- 20/02/2023
06. base/setuserid.c: added set_additional_groups function, refactored
    setuserid.c
07. qgetpwgr.c: allow alternate passwd, group, service for uid 0 using env
    variables
08. isnum.c: refactored isnum.c
- 15/04/2023
09. configure.ac: fixed setting of pkgconfigdir
- 23/04/2023 Final release libqmail-1.1.3
- 24/04/2023
10. error.c, error.h: fixed error code numbering

* Mon Jan 30 2023 12:46:04 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1.2-1.1%{?dist}
Release 1.1.2 Start 10/10/2022 End 30/01/2023
======= Release Highlights ================================================
o tls functions for indimail-mta, indimail-virtualdomains
o subprintf function - substdio equivalent of printf
o qsnprintf, qsprintf functions - equivalent of snprintf and sprintf
  functions using stralloc instead of fixed size buffer.
===========================================================================
- 10/10/2022
01. configure.ac: Fixed leapsecs.dat path
- 05/11/2022
02. digest-md5.c: return incorrect password for invalid arguments
03. pw_comp.c: added documentary comments.
- 06/12/2022